--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>test</title>
     <meta property="og:type" content="website">
-    <meta property="og:title" content="<script>console.log('hello there');</script>" />
+    <meta property="og:title" content="<p>Hello there</p>" />
     <meta property="og:description" content="website description" />
     <meta property="og:url" content="website url" />
     <meta property="og:image" content="full thumbnail path" />
